--- a/style.css
+++ b/style.css
@@ -13,13 +13,7 @@ h1,
 h2,
 h3,
 h4,
-p,
-figure,
-blockquote,
-dl,
-dd,
-ul,
-ol {
+p {
   margin: 0;
   padding: 0;
   outline: 0;
@@ -30,65 +24,91 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+img {
+  width: 100%;
+  vertical-align: bottom;
+}
+
 .header {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-align: center;
-  font-size: 3.5rem;
+  font-size: 3rem;
   padding: 1.5rem;
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
   min-height: 10vh;
 }
 
 section h2 {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Helvetica, sans-serif;
   font-size: 2rem;
-  margin-bottom: 0.3rem;
+  margin-bottom: 1rem;
+  text-decoration: underline;
 }
 
 section p {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 1rem;
+  font-family: Helvetica, sans-serif;
+  max-width: 60ch;
 }
 
 .section-container {
-  background-color: steelblue;
-  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  align-items: center;
+  justify-content: center;
 }
 
 .blog {
-  background-color: aliceblue;
   min-height: 30vh;
   padding: 2rem;
   text-align: center;
+}
 
+.blog > p {
+  font-size: 1.5rem;
+  font-style: italic;
 }
 
 .about {
-  background-color: beige;
   min-height: 30vh;
   padding: 2rem;
   text-align: center;
 }
 
+.about > p {
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.profile-container {
+  width: 10rem;
+  margin: 1rem auto 1.3rem auto;
+}
+
 .contact {
-  background-color: rgb(73, 172, 170);
   min-height: 30vh;
   padding: 2rem;
   text-align: center;
+}
+
+.contact > p {
+  font-size: 1.5rem;
+  font-style: italic;
 }
 
 footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   height: max(3.7rem, 10vh);
   background-color: #1e1e1e;
   color: white;
   font-size: 1.2rem;
   padding: 0.1rem;
+}
 
-  @media (max-width: 768px) {
-    flex-wrap: wrap;
-    font-size: 1rem;
-  }
+footer > span {
+  margin-left: 1rem;
 }
